[metadata]
name = lime-usb
version = 0.0.1
author = xxninjabunnyxx
author_email = xxninjabunnyxx@gmail.com
description = A wrapper for Lime USB for the RP2040 written in MicroPython
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xxninjabunnyxx/micromapper
project_urls =
    Bug Tracker = https://github.com/xxninjabunnyxx/micromapper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src